# ChiiEdit

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  build.sh  configure.ac
src/: .gitignore  Makefile.am  chiiEdit.c  commandLine.c  commandLine.h  editor.c  editor.h  fileIO.c  fileIO.h  find.c  find.h  global.h  input.c  input.h  memBuffer.c  memBuffer.h  output.c  output.h  row.c  row.h  term.c  term.h  version.c  version.h  versionConfig.h.in
tests/: build_test.bats
