bin_PROGRAMS = ChiiEdit
ChiiEdit_SOURCES = \
	chiiEdit.c \
	commandLine.c \
	commandLine.h \
	editor.c \
	editor.h \
	fileIO.c \
	fileIO.h \
	find.c \
	find.h \
	global.h \
	input.c \
	input.h \
	memBuffer.c \
	memBuffer.h \
	output.c \
	output.h \
	row.c \
	row.h \
	term.c \
	term.h \
	version.c \
	version.h \
	versionConfig.h
